docs/DAW/DAW_2/AWS/ut7/cloudformation/pila1.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: |
  Plantilla de ejemplo que despliega una instancia EC2 basica y muestra su IP publica como salida.

Parameters:
  InstanceType:
    Type: String
    Default: t2.micro
    Description: Tipo de instancia EC2
    AllowedValues:
      - t2.micro
      - t2.small

  VPCCIDR:
    Type: String
    Default: 10.0.0.0/16
    Description: Rango CIDR de la VPC

  PublicSubnetCIDR:
    Type: String
    Default: 10.0.1.0/24
    Description: Subred publica

  PrivateSubnetCIDR:
    Type: String
    Default: 10.0.2.0/24
    Description: Subred privada

Mappings:
  RegionMap:
    eu-west-1:
      AMI: ami-0a8e758f5e873d1c1
    us-east-1:
      AMI: ami-0c02fb55956c7d316

Resources:

  WebServer:
    Type: AWS::EC2::Instance
    DependsOn:
      - VPC
      - SecurityGroup
      - SubnetPublic
    Properties:
      InstanceType: !Ref InstanceType
      ImageId: !FindInMap
        - RegionMap
        - !Ref AWS::Region
        - AMI
      SubnetId:
        - !Ref SubnetPublic
      SecurityGroupIds:
        - !Ref SecurityGroup
      Tags:
        - Key: Name
          Value: ServidorWebEjemplo
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      # CidrBlock: 10.0.0.0/16
      CidrBlock: !Ref VPCCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: VPC-RA4-CEe

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
     # VpcId: !Ref VPC
     # InternetGatewayId: !Ref InternetGateway
      Tags:
        - Key: Name
          Value: VPC-IGW

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  SubnetPublic:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select
        - 0
        - !GetAZs ''
      CidrBlock: !Ref PublicSubnetCIDR
      MapPublicIpOnLaunch: true

  SubnetPrivate:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select
        - 0
        - !GetAZs ''
      CidrBlock: !Ref PrivateSubnetCIDR

      MapPublicIpOnLaunch: false

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: RT-SubRed-Publica

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref SubnetPublic
      RouteTableId: !Ref PublicRouteTable

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: RT-SubRed-Privada

  PrivateSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref SubnetPrivate
      RouteTableId: !Ref PrivateRouteTable

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable










  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http & ssh to client host
      GroupName: SG-EC2
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          Description: abrir puerto http
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          Description: abrir puerto ssh
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: SG-EC2

Outputs:
  InstanceId:
    Description: ID de la instancia EC2
    Value: !Ref WebServer

  PublicIP:
    Description: Dirección IP pública de la instancia
    Value: !GetAtt WebServer.PublicIp
